# sahayak-ai

./: .gitignore  README.md  SETUP.md  SETUP_STATUS.md  STREAMLIT_README.md  adk_response_debug.ipynb  requirements.txt  setup.sh  start-dev.sh  start_streamlit.sh  streamlit_app.py  streamlit_app_fixed.py  test_clean.py  troubleshoot.sh
agentic-backend/: .env.example  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  debug_transformer_lab.py  demo_server.py  deploy.py  example_usage.py  local_dev_server.py  pyproject.toml  server.py  settings.json  simple_server.py  standalone_dev_server.py  start.sh  test_local_endpoints.py  test_system.py
agentic-backend/api/: main.py
agentic-backend/sahayak_agents/: __init__.py  agent.py
agentic-backend/sahayak_agents/sub_agents/: __init__.py  story_agent.py  visual_aid_agent.py  worksheet_agent.py
agentic-backend/sahayakai/: agent.py  config.py  local_model_client.py  prompt.py  tools.py
agentic-backend/sahayakai/sub_agents/content_gen_agent/: __init__.py  agent.py  prompt.py
agentic-backend/sahayakai/sub_agents/merger_agent/: __init__.py  agent.py  prompt.py
agentic-backend/sahayakai/sub_agents/orchestrator_agent/: __init__.py  agent.py  prompt.py
agentic-backend/sahayakai/sub_agents/story_agent/: __init__.py  agent.py  prompt.py
agentic-backend/sahayakai/sub_agents/visual_aid_agent/: __init__.py  agent.py  prompt.py
agentic-backend/sahayakai/sub_agents/visual_aid_agent/tools/: __init__.py  image_generation_tool.py
agentic-backend/sahayakai/sub_agents/worksheet_agent/: __init__.py  agent.py  prompt.py
agentic-backend/shared/: __init__.py  config.py  prompts.py  utils.py
backend/: .env.example  README.md  firebase_types.py  main.py  requirements.txt  simple_main.py  (+5 more)
(+45 files in other folders)
