[tool.poetry]
name = "sahayak-agents"
version = "0.1.0"
description = "AI-powered co-teacher agents for rural multi-grade classrooms in India"
authors = ["Sahayak Team <team@sahayak.ai>"]
readme = "README.md"
packages = [{include = "sahayak_agents"}]

[tool.poetry.dependencies]
python = "^3.12"
google-adk = "^1.0.0"
google-cloud-aiplatform = { extras = [
    "adk",
    "agent-engines",
], version = "^1.93.0" }
google-genai = "^1.9.0"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
google-adk = { version = "^1.0.0", extras = ["eval"] }
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
absl-py = "^2.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
